--- a/SolarSystem/SolarSystem/SolarSystem.csproj
+++ b/SolarSystem/SolarSystem/SolarSystem.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="CoordinatesCalculation\ICalculator.cs" />
     <Compile Include="CoordinatesCalculation\Timer.cs" />
+    <Compile Include="CoordinatesCalculation\Variables.cs" />
     <Compile Include="ObjectsInSpace\CelestialBodyCollection.cs" />
     <Compile Include="ObjectsInSpace\ICelestialBody.cs" />
     <Compile Include="ObjectsInSpace\ISatellite.cs" />
