--- a/SolarSystem/SolarSystem/SolarSystem/SolarSystem.csproj
+++ b/SolarSystem/SolarSystem/SolarSystem/SolarSystem.csproj
@@ -30,8 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -41,29 +39,25 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CoordinatesCalculation\ICalculator.cs" />
-    <Compile Include="CoordinatesCalculation\Timer.cs" />
-    <Compile Include="CoordinatesCalculation\Variables.cs" />
     <Compile Include="ObjectsInSpace\CelestialBodyCollection.cs" />
     <Compile Include="ObjectsInSpace\ICelestialBody.cs" />
     <Compile Include="ObjectsInSpace\ISatellite.cs" />
     <Compile Include="ObjectsInSpace\Moon.cs" />
-    <Compile Include="ObjectsInSpace\Orbit.cs" />
     <Compile Include="ObjectsInSpace\Rocket.cs" />
     <Compile Include="CoordinatesCalculation\SpaceConstants.cs" />
     <Compile Include="ObjectsInSpace\SpaceObject.cs" />
     <Compile Include="ObjectsInSpace\Planet.cs" />
-    <Compile Include="ObjectsInSpace\SpaceObjectCollection.cs" />
-    <Compile Include="ObjectsInSpace\Sun.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CoordinatesCalculation\StandardCalculator.cs" />
+    <Compile Include="Visualisation\Visualizer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="SolarSystemDiagram.cd" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
