--- a/SolarSystem/SolarSystem/SolarSystem.csproj
+++ b/SolarSystem/SolarSystem/SolarSystem.csproj
@@ -45,13 +45,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoordinatesCalculation\CometCalculatorcs.cs" />
     <Compile Include="CoordinatesCalculation\ICalculator.cs" />
     <Compile Include="CoordinatesCalculation\Timer.cs" />
     <Compile Include="CoordinatesCalculation\Variables.cs" />
-    <Compile Include="ObjectsInSpace\ICelestialBody.cs" />
     <Compile Include="ObjectsInSpace\Moon.cs" />
     <Compile Include="ObjectsInSpace\Orbit.cs" />
-    <Compile Include="ObjectsInSpace\Rocket.cs" />
+    <Compile Include="ObjectsInSpace\Comet.cs" />
     <Compile Include="ObjectsInSpace\SpaceObject.cs" />
     <Compile Include="ObjectsInSpace\Planet.cs" />
     <Compile Include="ObjectsInSpace\SpaceObjectCollection.cs" />
